[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/player/ninjaPlayer.gd" type="Script" id=1]
[ext_resource path="res://src/player/UI.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/objs/hand/hand.tres" type="ArrayMesh" id=3]
[ext_resource path="res://assets/material/red.tres" type="Material" id=4]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 3, 1 )

[sub_resource type="Animation" id=2]
resource_name = "shoot"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("hand:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03, 0.07 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -1, -0.290021 ), Vector3( 0, -1, -0.137487 ), Vector3( 0, -1, -0.290021 ) ]
}

[node name="ninjaPlayer" type="KinematicBody" groups=[
"player",
]]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.34105, 0 )

[node name="Camera" type="Camera" parent="head"]
current = true
fov = 90.0
far = 8192.0

[node name="Position3D" type="Position3D" parent="head/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2 )

[node name="fartherPos" type="Position3D" parent="head/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -7 )

[node name="fartherPos2" type="Position3D" parent="head/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -28 )

[node name="whereToSpawnBullet" type="Position3D" parent="head/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, -2 )

[node name="UI" parent="head/Camera" instance=ExtResource( 2 )]

[node name="camTween" type="Tween" parent="head/Camera"]

[node name="camTweenBack" type="Tween" parent="head/Camera"]

[node name="hand" type="MeshInstance" parent="head/Camera"]
transform = Transform( -4.37114e-09, 0, 0.1, 0, 0.1, 0, -0.1, 0, -4.37114e-09, 0, -1, -0.290021 )
material_override = ExtResource( 4 )
mesh = ExtResource( 3 )
material/0 = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="head/Camera"]
anims/shoot = SubResource( 2 )

[node name="sniperRay" type="RayCast" parent="head/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -1500 )
collide_with_areas = true

[node name="machineGunTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="sniperTimer" type="Timer" parent="."]

[node name="gernadeTimer" type="Timer" parent="."]

[node name="windTimers" type="Timer" parent="."]

[node name="rocketTimer" type="Timer" parent="."]

[node name="shootBullet" type="AudioStreamPlayer3D" parent="."]
